# Droidlate

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
android_translator/: __init__.py  cli_wizard.py  config.py  main.py
android_translator/parser/: __init__.py  diff_engine.py  xml_parser.py
android_translator/translator/: __init__.py
android_translator/web/: server.py
android_translator/web/static/: app.js  index.html  style.css
docs/: design_specification.md
droidlate/: __init__.py  cli_wizard.py  config.py  main.py  update_checker.py
droidlate/parser/: __init__.py  diff_engine.py  xml_parser.py
droidlate/translator/: __init__.py  apis.py  engine.py
droidlate/web/: server.py
droidlate/web/static/: app.js  index.html  style.css
