[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "droidlate"
version = "1.0.0"
description = "Droidlate: A local web-based Weblate-like UI for managing and editing Android strings.xml translations."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0" }
dependencies = [
    "flask>=3.0.0",
    "requests>=2.31.0"
]

[project.scripts]
droidlate = "android_translator.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["android_translator*"]

# Include web static files in package distribution
[tool.setuptools.package-data]
android_translator = ["web/static/*"]
