[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "droidlate"
version = "1.1.1"
description = "Droidlate: A local web-based Weblate-like UI for managing and editing Android strings.xml translations."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0" }
dependencies = [
    "flask>=3.0.0",
    "requests>=2.31.0"
]

[project.scripts]
droidlate = "droidlate.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["droidlate*"]

# Include web static files in package distribution
[tool.setuptools.package-data]
droidlate = ["web/static/*"]
